Translating to English

--- a/IAM+OSBORNE_2BILSTM.ipynb
+++ b/IAM+OSBORNE_2BILSTM.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Antes de empezar\n",
+    "# First steps\n",
     "\n",
     "conda activate python3.6_cv2"
    ]
