--- a/IAM+OSBORNE_2BILSTM.ipynb
+++ b/IAM+OSBORNE_2BILSTM.ipynb
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definiendo diccionario, codificación y longitud máxima"
+    "## Defining dictionary, codification and maximum length"
    ]
   },
   {
